# hiring-test-frontend-2024

./: .gitignore  .pre-commit-config.yaml  README.md  gulpfile.js  index.html  justfile  package-lock.json  package.json  pyproject.toml  script.js  step1.html  step2.html  step3.html  step4.html  tailwind.config.js
assets/js/: script.js
assets/styles/: style.css
config/: settings.py  urls.py
css/: input.css  output.css
deckfusion/: apps.py  forms.py  models.py  urls.py  views.py
deckfusion/templates/deckfusion/: base.html  form.html  form_header.html  index.html  info_form.html  stats_form.html
html/: result.html  step1.html  step2.html  step3.html  step4.html
js/: script.js
reading_journal/: apps.py  views.py
reading_journal/templates/reading_journal/: base.html  index.html
src/css/: output.css
src/hiring_test_frontend_2024/: __init__.py  __main__.py
src/html/: step1.html  step2.html  step3.html  step4.html
theme/templates/: base.html
